--- a/SquareHackathon/mainwindow.ui
+++ b/SquareHackathon/mainwindow.ui
@@ -641,6 +641,19 @@
          </rect>
         </property>
        </widget>
+       <widget class="QPushButton" name="submitAddBookingButton">
+        <property name="geometry">
+         <rect>
+          <x>180</x>
+          <y>330</y>
+          <width>80</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Submit</string>
+        </property>
+       </widget>
       </widget>
       <widget class="QWidget" name="signInProfileWidget">
        <widget class="QLineEdit" name="clientName">
