--- a/SquareHackathon/mainwindow.ui
+++ b/SquareHackathon/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="employeeManagerView">
      <widget class="QPushButton" name="addEmployeeButton">
@@ -258,6 +258,185 @@
        </property>
        <property name="text">
         <string>submit</string>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="monStartAddEmployee">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>210</y>
+         <width>51</width>
+         <height>23</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="tuesStartAddEmployee">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>210</y>
+         <width>51</width>
+         <height>23</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="wedStartAddEmployee">
+       <property name="geometry">
+        <rect>
+         <x>100</x>
+         <y>210</y>
+         <width>51</width>
+         <height>23</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="thursStartAddEmployee">
+       <property name="geometry">
+        <rect>
+         <x>150</x>
+         <y>210</y>
+         <width>51</width>
+         <height>23</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="friStartAddEmployee">
+       <property name="geometry">
+        <rect>
+         <x>200</x>
+         <y>210</y>
+         <width>51</width>
+         <height>23</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="satStartAddEmployee">
+       <property name="geometry">
+        <rect>
+         <x>250</x>
+         <y>210</y>
+         <width>51</width>
+         <height>23</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="sunStartAddEmployee">
+       <property name="geometry">
+        <rect>
+         <x>280</x>
+         <y>240</y>
+         <width>51</width>
+         <height>23</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="txt_startTimeAddEmployee">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>240</y>
+         <width>58</width>
+         <height>15</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Start time</string>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="monEndAddEmployee">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>270</y>
+         <width>51</width>
+         <height>23</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="tuesEndAddEmployee">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>270</y>
+         <width>51</width>
+         <height>23</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="wedEndAddEmployeee">
+       <property name="geometry">
+        <rect>
+         <x>100</x>
+         <y>270</y>
+         <width>51</width>
+         <height>23</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="thursEndAddEmployee">
+       <property name="geometry">
+        <rect>
+         <x>150</x>
+         <y>270</y>
+         <width>51</width>
+         <height>23</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="friEndAddEmployee">
+       <property name="geometry">
+        <rect>
+         <x>200</x>
+         <y>270</y>
+         <width>51</width>
+         <height>23</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="satEndAddEmployee">
+       <property name="geometry">
+        <rect>
+         <x>250</x>
+         <y>270</y>
+         <width>51</width>
+         <height>23</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="sunEndAddEmployee">
+       <property name="geometry">
+        <rect>
+         <x>280</x>
+         <y>300</y>
+         <width>51</width>
+         <height>23</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_2">
+       <property name="geometry">
+        <rect>
+         <x>40</x>
+         <y>310</y>
+         <width>58</width>
+         <height>15</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>End Time</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="submitSchedule_button">
+       <property name="geometry">
+        <rect>
+         <x>100</x>
+         <y>330</y>
+         <width>111</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>submit schedule</string>
        </property>
       </widget>
      </widget>
