--- a/SquareHackathon/mainwindow.ui
+++ b/SquareHackathon/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="employeeManagerView">
      <widget class="QPushButton" name="addEmployeeButton">
@@ -555,7 +555,7 @@
        </rect>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="signupWidget">
        <widget class="QLineEdit" name="clientFirstName">
@@ -726,13 +726,36 @@
         <property name="geometry">
          <rect>
           <x>120</x>
-          <y>160</y>
+          <y>10</y>
           <width>121</width>
           <height>16</height>
          </rect>
         </property>
         <property name="text">
-         <string>View All Bookings</string>
+         <string>Booking Schedule</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="refreshEmployeeBookings">
+        <property name="geometry">
+         <rect>
+          <x>140</x>
+          <y>390</y>
+          <width>80</width>
+          <height>25</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Refresh</string>
+        </property>
+       </widget>
+       <widget class="QTableWidget" name="bookingsViewTable">
+        <property name="geometry">
+         <rect>
+          <x>60</x>
+          <y>80</y>
+          <width>256</width>
+          <height>192</height>
+         </rect>
         </property>
        </widget>
       </widget>
