--- a/SquareHackathon/mainwindow.ui
+++ b/SquareHackathon/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="employeeManagerView">
      <widget class="QPushButton" name="addEmployeeButton">
@@ -250,8 +250,8 @@
       <widget class="QPushButton" name="submit">
        <property name="geometry">
         <rect>
-         <x>110</x>
-         <y>150</y>
+         <x>120</x>
+         <y>320</y>
          <width>80</width>
          <height>24</height>
         </rect>
@@ -413,7 +413,7 @@
         </rect>
        </property>
       </widget>
-      <widget class="QLabel" name="label_2">
+      <widget class="QLabel" name="txt_endTimeAddEmployee">
        <property name="geometry">
         <rect>
          <x>40</x>
@@ -424,19 +424,6 @@
        </property>
        <property name="text">
         <string>End Time</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="submitSchedule_button">
-       <property name="geometry">
-        <rect>
-         <x>100</x>
-         <y>330</y>
-         <width>111</width>
-         <height>31</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>submit schedule</string>
        </property>
       </widget>
      </widget>
@@ -975,7 +962,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>22</height>
+     <height>20</height>
     </rect>
    </property>
   </widget>
