--- a/SquareHackathon/mainwindow.ui
+++ b/SquareHackathon/mainwindow.ui
@@ -215,7 +215,7 @@
         </rect>
        </property>
       </widget>
-      <widget class="QLabel" name="label_2">
+      <widget class="QLabel" name="txt_monScheduleStaff">
        <property name="geometry">
         <rect>
          <x>120</x>
@@ -228,7 +228,7 @@
         <string>Mon:</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_3">
+      <widget class="QLabel" name="txt_tuesScheduleStaff">
        <property name="geometry">
         <rect>
          <x>120</x>
@@ -241,7 +241,7 @@
         <string>Tues:</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_4">
+      <widget class="QLabel" name="txt_wedScheduleStaff">
        <property name="geometry">
         <rect>
          <x>120</x>
@@ -254,7 +254,7 @@
         <string>Wed:</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_5">
+      <widget class="QLabel" name="txt_thursScheduleStaff">
        <property name="geometry">
         <rect>
          <x>120</x>
@@ -267,7 +267,7 @@
         <string>Thurs:</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_6">
+      <widget class="QLabel" name="txt_friScheduleStaff">
        <property name="geometry">
         <rect>
          <x>130</x>
@@ -280,7 +280,7 @@
         <string>Fri:</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_7">
+      <widget class="QLabel" name="txt_satScheduleStaff">
        <property name="geometry">
         <rect>
          <x>130</x>
@@ -293,7 +293,7 @@
         <string>Sat:</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_8">
+      <widget class="QLabel" name="txt_sunScheduleStaff">
        <property name="geometry">
         <rect>
          <x>130</x>
@@ -309,13 +309,13 @@
      </widget>
      <widget class="QWidget" name="addEmployeeWidget" native="true">
       <property name="enabled">
-       <bool>false</bool>
+       <bool>true</bool>
       </property>
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>480</y>
-        <width>341</width>
+        <x>380</x>
+        <y>50</y>
+        <width>371</width>
         <height>371</height>
        </rect>
       </property>
@@ -487,8 +487,8 @@
       <widget class="QComboBox" name="sunStartAddEmployee">
        <property name="geometry">
         <rect>
-         <x>280</x>
-         <y>240</y>
+         <x>300</x>
+         <y>210</y>
          <width>51</width>
          <height>23</height>
         </rect>
@@ -570,8 +570,8 @@
       <widget class="QComboBox" name="sunEndAddEmployee">
        <property name="geometry">
         <rect>
-         <x>280</x>
-         <y>300</y>
+         <x>300</x>
+         <y>270</y>
          <width>51</width>
          <height>23</height>
         </rect>
@@ -590,6 +590,19 @@
         <string>End Time</string>
        </property>
       </widget>
+     </widget>
+     <widget class="QPushButton" name="backButtonEmployeeManager">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>51</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Back</string>
+      </property>
      </widget>
     </widget>
     <widget class="QWidget" name="bookManagerView">
@@ -664,7 +677,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>10</y>
+        <y>50</y>
         <width>101</width>
         <height>20</height>
        </rect>
@@ -677,7 +690,7 @@
       <property name="geometry">
        <rect>
         <x>100</x>
-        <y>10</y>
+        <y>50</y>
         <width>171</width>
         <height>25</height>
        </rect>
@@ -687,7 +700,7 @@
       <property name="geometry">
        <rect>
         <x>280</x>
-        <y>10</y>
+        <y>50</y>
         <width>80</width>
         <height>25</height>
        </rect>
@@ -1075,6 +1088,19 @@
         </property>
        </widget>
       </widget>
+     </widget>
+     <widget class="QPushButton" name="pushButton">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>51</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Back</string>
+      </property>
      </widget>
     </widget>
     <widget class="QWidget" name="mainMenuView">
